--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
 ]
 dependencies = [
+    "numpy>=2.4.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "scipy>=1.16.3",
 ]
 
 [project.urls]
