--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ authors = [
 ]
 keywords = [
     "chemical-engineering",
+    "chemical-reactions",
+    "reaction-representation",
     "reaction-stoichiometry",
     "reaction-analysis",
 ]
@@ -35,6 +37,7 @@ dependencies = [
 
 [project.urls]
 Homepage = "https://github.com/sinagilassi/PyReactLab-Core"
+Documentation = "https://pyreactlab-core.readthedocs.io/en/latest/"
 Source = "https://github.com/sinagilassi/PyReactLab-Core"
 Tracker = "https://github.com/sinagilassi/PyReactLab-Core/issues"
 
