--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "scipy>=1.16.3",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "rich>=14.2.0",
 ]
 
 [project.urls]
